# mr-cli

./: .gitignore  README.md  pyproject.toml
mr_cli/: __init__.py  __main__.py
